Правки(добавил ссылки в меню, недостающие type=button)

--- a/form.html
+++ b/form.html
@@ -26,16 +26,16 @@
       <nav class="main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Главная</a>
+            <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Фотографии</a>
+            <a class="main-nav__link" href="photo.html">Фотографии</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Конкурс</a>
+            <a class="main-nav__link">Конкурс</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">HTML Academy</a>
+            <a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a>
           </li>
         </ul>
       </nav>
@@ -192,23 +192,23 @@
             <svg class="logo__icon-blue"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-mobile"></use></svg>
             <svg class="logo__icon-blue-desktop"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-desktop"></use></svg>
         </a>
-          <div class="social-links">
-            <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
-            <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
-            <a class="social-links__btn social-links__btn--you-tube" href="#">YouTube</a>
-          </div>
-          <div class="page-footer__copyright">
-            <a class="page-footer__copyright-link" href="#">
-              Разработано <span>HTML Academy</span>
-              <svg class="page-footer__copyright-icon" width="27" height="34"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use></svg>
-            </a>
-          </div>
+        <div class="social-links">
+          <a class="social-links__btn social-links__btn--twitter" href="https://twitter.com/">Twitter</a>
+          <a class="social-links__btn social-links__btn--facebook" href="https://www.facebook.com/">Facebook</a>
+          <a class="social-links__btn social-links__btn--you-tube" href="http://www.youtube.com/">YouTube</a>
+        </div>
+        <div class="page-footer__copyright">
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru/">
+            Разработано <span>HTML Academy</span>
+            <svg class="page-footer__copyright-icon" width="27" height="34"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use></svg>
+          </a>
+        </div>
         </div>
       </div>
     </footer>
 
     <!-- модификатор popup--hidden скрывает pop up -->
-    <div class="popup  popup--wrong  popup--hidden">
+    <div class="popup  popup--wrong">
       <div class="popup__wrapper">
         <div class="popup__title">
           Что-то пошло не&nbsp;так!
@@ -223,7 +223,7 @@
     </div>
 
     <!-- модификатор popup--hidden скрывает pop up -->
-    <div class="popup  popup--success  popup--hidden">
+    <div class="popup  popup--success">
       <div class="popup__wrapper">
         <div class="popup__title">
           Ваша заявка отправлена
