--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- page-header--open используется для перевода меню в открытое состояние  -->
     <header class="page-header  page-header--open">
       <div class="page-header__wrapper">
-        <a class="logo" href="index.html">
+        <a class="logo">
           <svg class="logo__icon-mobile"  width="76" height="24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-white-mobile"></use></svg>
           <svg class="logo__icon-tablet"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-white-tablet"></use></svg>
           <svg class="logo__icon-desktop"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-white-desktop"></use></svg>
@@ -29,13 +29,13 @@
             <a class="main-nav__link">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Фотографии</a>
+            <a class="main-nav__link" href="photo.html">Фотографии</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Конкурс</a>
+            <a class="main-nav__link" href="form.html">Конкурс</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">HTML Academy</a>
+            <a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a>
           </li>
         </ul>
       </nav>
@@ -265,18 +265,17 @@
     <footer class="page-footer  page-footer--index-page">
       <div class="page-footer__wrapper">
         <div class="page-footer__container">
-          <a class="logo  logo--blue" href="index.html">
+          <a class="logo  logo--blue">
             <svg class="logo__icon-blue"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-mobile"></use></svg>
             <svg class="logo__icon-blue-desktop"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-desktop"></use></svg>
           </a>
-
           <div class="social-links">
-            <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
-            <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
-            <a class="social-links__btn social-links__btn--you-tube" href="#">YouTube</a>
+            <a class="social-links__btn social-links__btn--twitter" href="https://twitter.com/">Twitter</a>
+            <a class="social-links__btn social-links__btn--facebook" href="https://www.facebook.com/">Facebook</a>
+            <a class="social-links__btn social-links__btn--you-tube" href="http://www.youtube.com/">YouTube</a>
           </div>
           <div class="page-footer__copyright">
-            <a class="page-footer__copyright-link" href="#">
+            <a class="page-footer__copyright-link" href="https://htmlacademy.ru/">
               Разработано <span>HTML Academy</span>
               <svg class="page-footer__copyright-icon" width="27" height="34"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use></svg>
             </a>
