--- a/photo.html
+++ b/photo.html
@@ -26,16 +26,16 @@
       <nav class="main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Главная</a>
+            <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Фотографии</a>
+            <a class="main-nav__link">Фотографии</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">Конкурс</a>
+            <a class="main-nav__link" href="form.html">Конкурс</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="#">HTML Academy</a>
+            <a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a>
           </li>
         </ul>
       </nav>
@@ -58,9 +58,9 @@
       <section class="photo-post  photo-post--panorama">
         <a class="photo-post__image-link" href="#">
           <picture>
-            <source media = "(min-width: 1200px)"
+            <source media="(min-width: 1200px)"
             srcset = "img/panorama-desktop.jpg, img/panorama-desktop@2x.jpg 2x">
-            <source media = "(min-width: 700px)"
+            <source media="(min-width: 700px)"
             srcset = "img/panorama-tablet.jpg, img/panorama-tablet@2x.jpg 2x">
             <img class="photo-post__image  photo-post__image--panorama" alt="" width="320" height="135"
             src="img/panorama-mobile.jpg"
@@ -78,7 +78,7 @@
               <p>Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую транслацию в&nbsp;перископе, задавайте свои вопросы!</p>
             </div>
             <div class="like-field">
-              <button class="like-field__btn">Нравится</button>
+              <button class="like-field__btn"  type="button">Нравится</button>
               <div class="like-field__like-count">
                 <span class="like-field__label">Нравится:</span>
                 <span class="like-field__count">215</span>
@@ -92,11 +92,11 @@
           <section class="photo-post">
             <a class="photo-post__image-link" href="#">
               <picture>
-                <source media = "(min-width: 1200px)"
+                <source media="(min-width: 1200px)"
                 srcset = "img/photo-1-desktop.jpg, img/photo-1-desktop@2x.jpg 2x">
-                <source media = "(min-width: 700px)"
+                <source media="(min-width: 700px)"
                 srcset = "img/photo-1-tablet.jpg, img/photo-1-tablet@2x.jpg 2x">
-                <img class="photo-post__image"  alt="" width="280" height="180"
+                <img class="photo-post__image"  alt="Фотография пользователя" width="280" height="180"
                 src="img/photo-1-mobile.jpg"
                 srcset="img/photo-1-mobile@2x.jpg 2x">
               </picture>
@@ -112,7 +112,7 @@
                 </div>
               </div>
               <div class="like-field">
-                <button class="like-field__btn">Нравится</button>
+                <button class="like-field__btn"  type="button">Нравится</button>
                 <div class="like-field__like-count">
                   <span class="like-field__label">Нравится:</span>
                   <span class="like-field__count">356</span>
@@ -123,11 +123,11 @@
           <section class="photo-post">
             <a class="photo-post__image-link" href="#">
               <picture>
-                <source media = "(min-width: 1200px)"
+                <source media="(min-width: 1200px)"
                 srcset = "img/photo-2-desktop.jpg, img/photo-2-desktop@2x.jpg 2x">
-                <source media = "(min-width: 700px)"
+                <source media="(min-width: 700px)"
                 srcset = "img/photo-2-tablet.jpg, img/photo-2-tablet@2x.jpg 2x">
-                <img class="photo-post__image"  alt="" width="280" height="180"
+                <img class="photo-post__image"  alt="Фотография пользователя" width="280" height="180"
                 src="img/photo-2-mobile.jpg"
                 srcset="img/photo-2-mobile@2x.jpg 2x">
               </picture>
@@ -143,7 +143,7 @@
                 </div>
               </div>
               <div class="like-field">
-                <button class="like-field__btn">Нравится</button>
+                <button class="like-field__btn" type="button">Нравится</button>
                 <div class="like-field__like-count">
                   <span class="like-field__label">Нравится:</span>
                   <span class="like-field__count">666</span>
@@ -154,11 +154,11 @@
           <section class="photo-post">
             <a class="photo-post__image-link" href="#">
               <picture>
-                <source media = "(min-width: 1200px)"
+                <source media="(min-width: 1200px)"
                 srcset = "img/photo-3-desktop.jpg, img/photo-3-desktop@2x.jpg 2x">
-                <source media = "(min-width: 700px)"
+                <source media="(min-width: 700px)"
                 srcset = "img/photo-3-tablet.jpg, img/photo-3-tablet@2x.jpg 2x">
-                <img class="photo-post__image"  alt="" width="280" height="180"
+                <img class="photo-post__image"  alt="Фотография пользователя" width="280" height="180"
                 src="img/photo-3-mobile.jpg"
                 srcset="img/photo-3-mobile@2x.jpg 2x">
               </picture>
@@ -174,7 +174,7 @@
                 </div>
               </div>
               <div class="like-field">
-                <button class="like-field__btn">Нравится</button>
+                <button class="like-field__btn"  type="button">Нравится</button>
                 <div class="like-field__like-count">
                   <span class="like-field__label">Нравится:</span>
                   <span class="like-field__count">215</span>
@@ -185,11 +185,11 @@
           <section class="photo-post">
             <a class="photo-post__image-link" href="#">
               <picture>
-                <source media = "(min-width: 1200px)"
+                <source media="(min-width: 1200px)"
                 srcset = "img/photo-4-desktop.jpg, img/photo-4-desktop@2x.jpg 2x">
-                <source media = "(min-width: 700px)"
+                <source media="(min-width: 700px)"
                 srcset = "img/photo-4-tablet.jpg, img/photo-4-tablet@2x.jpg 2x">
-                <img class="photo-post__image"  alt="" width="280" height="180"
+                <img class="photo-post__image"  alt="Фотография пользователя" width="280" height="180"
                 src="img/photo-4-mobile.jpg"
                 srcset="img/photo-4-mobile@2x.jpg 2x">
               </picture>
@@ -205,7 +205,7 @@
                 </div>
               </div>
               <div class="like-field">
-                <button class="like-field__btn">Нравится</button>
+                <button class="like-field__btn" type="button">Нравится</button>
                 <div class="like-field__like-count">
                   <span class="like-field__label">Нравится:</span>
                   <span class="like-field__count">4</span>
@@ -216,11 +216,11 @@
           <section class="photo-post">
             <a class="photo-post__image-link" href="#">
               <picture>
-                <source media = "(min-width: 1200px)"
+                <source media="(min-width: 1200px)"
                 srcset = "img/photo-5-desktop.jpg, img/photo-5-desktop@2x.jpg 2x">
-                <source media = "(min-width: 700px)"
+                <source media="(min-width: 700px)"
                 srcset = "img/photo-5-tablet.jpg, img/photo-5-tablet@2x.jpg 2x">
-                <img class="photo-post__image"  alt="" width="280" height="180"
+                <img class="photo-post__image"  alt="Фотография пользователя" width="280" height="180"
                 src="img/photo-5-mobile.jpg"
                 srcset="img/photo-5-mobile@2x.jpg 2x">
               </picture>
@@ -236,7 +236,7 @@
                 </div>
               </div>
               <div class="like-field">
-                <button class="like-field__btn">Нравится</button>
+                <button class="like-field__btn" type="button">Нравится</button>
                 <div class="like-field__like-count">
                  <span class="like-field__label">Нравится:</span>
                  <span class="like-field__count">150</span>
@@ -247,9 +247,9 @@
          <section class="photo-post">
           <a class="photo-post__image-link" href="#">
             <picture>
-              <source media = "(min-width: 1200px)"
+              <source media="(min-width: 1200px)"
               srcset = "img/photo-6-desktop.jpg, img/photo-6-desktop@2x.jpg 2x">
-              <source media = "(min-width: 700px)"
+              <source media="(min-width: 700px)"
               srcset = "img/photo-6-tablet.jpg, img/photo-6-tablet@2x.jpg 2x">
               <img class="photo-post__image"  alt="" width="280" height="180"
               src="img/photo-6-mobile.jpg"
@@ -267,7 +267,7 @@
              </div>
            </div>
            <div class="like-field">
-             <button class="like-field__btn">Нравится</button>
+             <button class="like-field__btn" type="button">Нравится</button>
              <div class="like-field__like-count">
                <span class="like-field__label">Нравится:</span>
                <span class="like-field__count">2560</span>
@@ -282,11 +282,11 @@
     <div class="post-photo__wrapper">
     <div class="post-photo__left-container">
         <picture>
-          <source media = "(min-width: 1200px)"
+          <source media="(min-width: 1200px)"
           srcset = "img/photo-7-desktop.jpg, img/photo-7-desktop@2x.jpg 2x">
-          <source media = "(min-width: 700px)"
+          <source media="(min-width: 700px)"
           srcset = "img/photo-7-tablet.jpg, img/photo-7-tablet@2x.jpg 2x">
-          <img class="post-photo__image"  alt="" width="280" height="375"
+          <img class="post-photo__image"  alt="Фотография пользователя" width="280" height="375"
           src="img/photo-7-mobile.jpg"
           srcset="img/photo-7-mobile@2x.jpg 2x">
         </picture>
@@ -294,15 +294,15 @@
       <div class="post-photo__right-container">
         <div class="post-photo__filter">
           <div class="post-photo__filter-buttons">
-            <button class="post-photo__filter-button  post-photo__filter-button--active">
+            <button class="post-photo__filter-button  post-photo__filter-button--active" type="button">
               Фильтр1
               <svg class="post-photo__filter-button-icon  post-photo__filter-button-icon--crop"  width="48" height="48"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-editor-crop"></use></svg>
             </button>
-            <button class="post-photo__filter-button">
+            <button class="post-photo__filter-button" type="button">
               Фильтр2
               <svg class="post-photo__filter-button-icon  post-photo__filter-button-icon--fill"  width="45" height="50"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-editor-fill"></use></svg>
             </button>
-            <button class="post-photo__filter-button">
+            <button class="post-photo__filter-button" type="button">
               Фильтр3
               <svg class="post-photo__filter-button-icon  post-photo__filter-button-icon--contrast"  width="35" height="35"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-editor-contrast"></use></svg>
             </button>
@@ -331,7 +331,7 @@
         </div>
         <div class="post-photo__buttons">
          <input class="transparent-btn" type="submit" value="Запостить">
-         <button class="transparent-btn  transparent-btn--gray" >Отмена</button>
+         <button class="transparent-btn  transparent-btn--gray"  type="button">Отмена</button>
        </div>
      </div>
    </div>
@@ -347,12 +347,12 @@
         <svg class="logo__icon-blue-desktop"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-desktop"></use></svg>
       </a>
       <div class="social-links">
-        <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
-        <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
-        <a class="social-links__btn social-links__btn--you-tube" href="#">YouTube</a>
+        <a class="social-links__btn social-links__btn--twitter" href="https://twitter.com/">Twitter</a>
+        <a class="social-links__btn social-links__btn--facebook" href="https://www.facebook.com/">Facebook</a>
+        <a class="social-links__btn social-links__btn--you-tube" href="http://www.youtube.com/">YouTube</a>
       </div>
       <div class="page-footer__copyright">
-        <a class="page-footer__copyright-link" href="#">
+        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/">
           Разработано <span>HTML Academy</span>
           <svg class="page-footer__copyright-icon" width="27" height="34"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use></svg>
         </a>
