--- a/form.html
+++ b/form.html
@@ -236,7 +236,7 @@
         <button class="button" type="button">Закрыть окно</button>
       </div>
     </div>
-
   </div>
+  <script src="js/picturefill.min.js"></script>
 </body>
 </html>
