--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="no-js" lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -284,6 +284,10 @@
       </div>
     </footer>
   </div>
+  <script>
+    var html = document.documentElement;
+    html.className = html.className.replace("no-js","js");
+  </script>
   <script src="picturefill.min.js"></script>
 </body>
 </html>
